suppress logging messages

--- a/src/triage/component/postmodeling/triage_experiment_report_template.ipynb
+++ b/src/triage/component/postmodeling/triage_experiment_report_template.ipynb
@@ -26,6 +26,7 @@
     "import pandas as pd\n",
     "import sqlalchemy\n",
     "import os\n",
+    "import logging\n",
     "\n",
     "from sqlalchemy.engine.url import URL\n",
     "from triage.util.db import create_engine\n",
@@ -41,7 +42,10 @@
     "pd.set_option('display.max_columns', None)\n",
     "\n",
     "plt.rcParams.update({\"figure.dpi\": 120})\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "# suppress logging messages \n",
+    "logging.getLogger().setLevel(logging.CRITICAL)"
    ]
   },
   {
