--- a/src/triage/component/postmodeling/triage_experiment_report_template.ipynb
+++ b/src/triage/component/postmodeling/triage_experiment_report_template.ipynb
@@ -88,11 +88,12 @@
    "source": [
     "# The most recent completed experiment hash\n",
     "# Note that this has to be a list\n",
-    "# experiment_hashes = [get_most_recent_experiment_hash(db_engine)]\n",
+    "# You can replace the get_most_recent_... function call with your list of experiments to analyse different experiments\n",
+    "experiment_hashes = [get_most_recent_experiment_hash(db_engine)]\n",
     "\n",
-    "experiment_hashes = ['4b19ea1500baf03ce9728edc2ce9a9d8']\n",
     "\n",
     "# Model Performance metric and threshold defaulting to reacll@1_pct\n",
+    "# You can update these to use different metrics, e.g., precision@, 100_abs\n",
     "performance_metric = 'recall@'\n",
     "threshold = '1_pct'\n",
     "\n",
