change of name in feature_missingness

--- a/src/triage/component/postmodeling/triage_experiment_report_template.ipynb
+++ b/src/triage/component/postmodeling/triage_experiment_report_template.ipynb
@@ -99,7 +99,10 @@
     "\n",
     "# Bias metric defaults to tpr_disparity and bias metric values for all groups generated (if bias audit specified in the experiment config)\n",
     "bias_metric = 'tpr_disparity'\n",
-    "bias_priority_groups=None"
+    "bias_priority_groups=None\n",
+    "### bias_priority_groups example \n",
+    "# bias_priority_groups = {'race': ['African American'], \n",
+    "#                         'gender': ['Female']}"
    ]
   },
   {
@@ -127,12 +130,12 @@
     "        ## Append these key-value pairs to the bias_audit section (if a bias audit is performed)\n",
     "        priority_metric: 'tpr_disparity'\n",
     "\n",
-    "      priority_groups:\n",
-    "        'race':\n",
-    "          - 'African American'\n",
-    "        'gender':\n",
-    "          - 'Female'\n",
-    "    ```"
+    "        priority_groups:\n",
+    "          'race':\n",
+    "            - 'African American'\n",
+    "          'gender':\n",
+    "            - 'Female'\n",
+    "  ```"
    ]
   },
   {
@@ -300,7 +303,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rep.feature_missingeness()"
+    "rep.feature_missingness()"
    ]
   },
   {
@@ -408,28 +411,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b5fd40f-2202-4b20-beaa-931e2945fee4",
-   "metadata": {},
-   "source": [
-    "## 9. Precision-Recall at different population thresholds"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "24188e24-32f8-49a3-8f23-fde83618c6c2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rep.precision_recall_curves()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "88975e61-aacd-445d-aebe-0616dd2b14de",
    "metadata": {},
    "source": [
-    "## 10. Initial Model Selection and Further analysis on best models\n",
+    "## 9. Initial Model Selection and Further analysis on best models\n",
     "For the purposes of this report, by default, we pick the best performing model from each model type based on average performance to generate additional outputs about the developed models. We would not assume the existence of predictions at this stage. Therefore, we will not do analysis such as list comparisons, crosstabs, score distribution type stuff. we'll look at more higher level comparisons between the different model types"
    ]
   },
@@ -441,32 +426,6 @@
    "outputs": [],
    "source": [
     "rep.get_best_hp_config_for_each_model_type()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f04d459e-daf3-48ee-9861-f87aaee8b29b",
-   "metadata": {},
-   "source": [
-    "### 10. Feature Importance of Model Groups"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "63e029a5-b940-4d1e-bf61-d90b4ba2ae4a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rep.feature_importance()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5a7f9991-9d78-46c5-a5c6-3fa1ed58b60f",
-   "metadata": {},
-   "source": [
-    "### 10.2 Overall Recall Curves"
    ]
   },
   {
