adding summary report

--- a/example/colab/colab_triage.ipynb
+++ b/example/colab/colab_triage.ipynb
@@ -121,7 +121,9 @@
         "id": "8mQ1nY6lksXD"
       },
       "source": [
-        "🛑  &nbsp;&nbsp;**NOTE 1: It's possible that you get errors while installing Triage, don't worry about those.**\n",
+        "🛑  &nbsp;&nbsp;**NOTE 1: It's possible that you get errors while installing Triage like the image below. If you are asked to Restart the Session, you are good to go.**\n",
+        "\n",
+        "![triage error installation](https://dssg.github.io/triage/install_error.png)\n",
         "\n",
         "🛑  &nbsp;&nbsp;**NOTE 2: Before continuing, your colab runtime may need to be restarted for the installed packages to take effect. If a \"Restart Runtime\" button appeared at the bottom of the output above, be sure to click it before moving on to the next section!**"
       ]
@@ -814,7 +816,7 @@
         "                  80, 81, 82, 83, 84, 85, 86, 87, 88, 89,\n",
         "                  90, 91, 92, 93, 94, 95, 96, 97, 98, 99,\n",
         "                  100]\n",
-        "              top_n: [25, 50, 100]\n",
+        "              top_n: [25, 50, 100]  \n",
         "          \n",
         "bias_audit_config:\n",
         "    from_obj_table: 'data.projects'\n",
@@ -828,7 +830,7 @@
         "    thresholds:\n",
         "        percentiles: [5, 10, 15, 20, 25, 50, 100]\n",
         "        top_n: [25, 50, 100]\n",
-        "\n",
+        "        \n",
         "individual_importance:\n",
         "    methods: [] # empty list means don't calculate individual importances\n",
         "    n_ranks: 1 \n",
@@ -880,16 +882,17 @@
       "outputs": [],
       "source": [
         "import yaml\n",
-        "\n",
-        "from sqlalchemy.engine.url import URL\n",
-        "from triage.util.db import create_engine\n",
-        "from triage.experiments import MultiCoreExperiment\n",
+        "import shutil\n",
+        "import os\n",
         "import logging\n",
         "\n",
-        "import os\n",
-        "\n",
+        "from sqlalchemy.engine.url import URL\n",
         "from sqlalchemy.event import listens_for\n",
         "from sqlalchemy.pool import Pool\n",
+        "\n",
+        "from triage.util.db import create_engine\n",
+        "from triage.experiments import MultiCoreExperiment\n",
+        "\n",
         "\n",
         "def run_triage():\n",
         "\n",
@@ -982,17 +985,328 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Checking the results \n",
+        "\n",
+        "Running `triage` will generate three types of outputs: \n",
+        "1. Summary report of the experiment\n",
+        "2. Objects stored to disk\n",
+        "3. Results stored in the database.\n",
+        "\n",
+        "#### 1. Summary report of the experiment \n",
+        "\n",
+        "After running an experiment in `triage` it will generate a summary report with important sanity checks to review before moving on to [Model Selection](#model-selection) and [Bias Audit](#bias-audit). Generally, this report would be generated automatically for your review, but since we are executing `triage` in Colab, the report won't be generated, instead, we will call the methods directly. \n",
+        "\n",
+        "You can follow this [guide](https://github.com/dssg/triage/tree/master/src/triage/component/postmodeling) to generate the report outside of Colab. "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "CpfPG-nyq1Nk"
+      },
+      "outputs": [],
+      "source": [
+        "import yaml\n",
+        "import pandas as pd\n",
+        "\n",
+        "from sqlalchemy.engine.url import URL\n",
+        "from triage.util.db import create_engine\n",
+        "from triage.component.postmodeling.experiment_summarizer import ExperimentReport\n",
+        "\n",
+        "dbconfig = yaml.safe_load(database_yaml)\n",
+        "db_url = URL(\n",
+        "            'postgres',\n",
+        "            host=dbconfig['host'],\n",
+        "            username=dbconfig['user'],\n",
+        "            database=dbconfig['db'],\n",
+        "            password=dbconfig['pass'],\n",
+        "            port=dbconfig['port'],\n",
+        "        )\n",
+        "\n",
+        "db_engine = create_engine(db_url)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We need to get the hash code generated to the experiment run"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "q = \"\"\" \n",
+        "    select run_hash, start_time \n",
+        "    from triage_metadata.triage_runs \n",
+        "    order by start_time desc\n",
+        "    limit 1\n",
+        "\"\"\"\n",
+        "\n",
+        "pd.read_sql(q, db_engine)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We need to define the performance metric, threshold, bias metric, and the priority groups we would like to look for.  "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Triage created hash(es) of the experiment(s) you are interested in. \n",
+        "# It has to be a list (even if single element)\n",
+        "experiment_hashes = ['']\n",
+        "\n",
+        "# Model Performance metric and threshold\n",
+        "# These default to 'recall@' and '1_pct'\n",
+        "performance_metric = 'precision@'\n",
+        "threshold = '50_abs'\n",
+        "\n",
+        "# Bias metric defaults to tpr_disparity and bias metric values for all groups generated (if bias audit specified in the experiment config)\n",
+        "bias_metric = 'tpr_disparity'\n",
+        "bias_priority_groups = {'teacher_prefix': ['Dr.', 'Mr.', 'Mrs.', 'Ms.']}\n",
+        "\n",
+        "# Create the Experient Rerport \n",
+        "rep = ExperimentReport(\n",
+        "    engine=db_engine,\n",
+        "    experiment_hashes=experiment_hashes,\n",
+        "    performance_priority_metric=performance_metric,\n",
+        "    threshold=threshold,\n",
+        "    bias_priority_metric=bias_metric,\n",
+        "    bias_priority_groups=bias_priority_groups\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Summary report of the experiment run"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "rep.generate_summary()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Visualize temporal splits"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "rep.timesplits()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Cohorts generated"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "cohort_summary = rep.cohorts(generate_plots=True)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "cohort_summary[['cohort_size', 'baserate']].describe()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Cohort subsets"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "rep.subsets()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Predictors"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "features = rep.features()\n",
+        "features"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Missing of features "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "rep.feature_missingness()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Model groups built"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "rep.model_groups()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "All models built"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "rep.models()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Model Performance Overall Cohort"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "evaluations = rep.model_performance()\n",
+        "evaluations"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Model Performance on Cohort Subsets "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "subset_evaluations = rep.model_performance_subsets()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Model Performance vs Bias"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "equity_metrics = rep.efficiency_and_equity()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Initial model selection and further analysis on best models \n",
+        "\n",
+        "By default, the report will pick the best performing model from each model type based on average performance to generate additional outputs about the developed models. We would not assume the existence of predictions at this stage. Therefore, we will not do analysis such as list comparisons, crosstabs, score distribution type stuff. we'll look at more higher level comparisons between the different model types"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "rep.get_best_hp_config_for_each_model_type()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "sPXmtJ667osT"
       },
       "source": [
-        "## Checking the results\n",
-        "\n",
-        "Running `triage` will generate two types of outputs: objects stored to disk and results stored in the database.\n",
+        "#### 2. Objects stored in disk\n",
         "\n",
         "Two types of objects will be stored to disk in the `project_path` specified in creating the experiment object:\n",
         "- The matrices used for model training and validation, stored as CSV files and associated metadata in yaml format.\n",
         "- The trained model objects themselves, stored as `joblib` pickles, which can be loaded and applied to new data.\n",
+        "\n",
+        "#### 3. Results stored in the database\n",
         "\n",
         "In the database, `triage` will store results and metadata in several tables. Below is a very brief tour of the most important of these tables.\n",
         "\n",
@@ -1020,32 +1334,6 @@
         "- The `features` schema contains two types of useful tables: tables containing calculated features for each feature group and \"matrix\" tables that provide the mapping from each training/validation matrix to `(entity_id, as_of_date)` pairs. Note, however, that these tables may be overwritten if a new run is performed with different feature logic, cohort, or underlying data and should not be assumed to be persistant across runs.\n",
         "\n",
         "Let's take a quick look at some of these outputs to confirm that our models ran as expected. First, we'll need a database connection..."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "CpfPG-nyq1Nk"
-      },
-      "outputs": [],
-      "source": [
-        "import yaml\n",
-        "from sqlalchemy.engine.url import URL\n",
-        "from triage.util.db import create_engine\n",
-        "import pandas as pd\n",
-        "\n",
-        "dbconfig = yaml.safe_load(database_yaml)\n",
-        "db_url = URL(\n",
-        "            'postgres',\n",
-        "            host=dbconfig['host'],\n",
-        "            username=dbconfig['user'],\n",
-        "            database=dbconfig['db'],\n",
-        "            password=dbconfig['pass'],\n",
-        "            port=dbconfig['port'],\n",
-        "        )\n",
-        "\n",
-        "db_engine = create_engine(db_url)"
       ]
     },
     {
