--- a/example/colab/colab_triage.ipynb
+++ b/example/colab/colab_triage.ipynb
@@ -1015,6 +1015,8 @@
         "from sqlalchemy.engine.url import URL\n",
         "from triage.util.db import create_engine\n",
         "from triage.component.postmodeling.experiment_summarizer import ExperimentReport\n",
+        "from matplotlib import pyplot as plt\n",
+        "%matplotlib inline\n",
         "\n",
         "dbconfig = yaml.safe_load(database_yaml)\n",
         "db_url = URL(\n",
@@ -1067,7 +1069,7 @@
       "source": [
         "# Triage created hash(es) of the experiment(s) you are interested in. \n",
         "# It has to be a list (even if single element)\n",
-        "experiment_hashes = ['']\n",
+        "experiment_hashes = ['98112c011d842c43e841c415116ef179']\n",
         "\n",
         "# Model Performance metric and threshold\n",
         "# These default to 'recall@' and '1_pct'\n",
@@ -1257,7 +1259,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "subset_evaluations = rep.model_performance_subsets()"
+        "subset_evaluations = rep.model_performance_subsets()\n",
+        "subset_evaluations"
       ]
     },
     {
@@ -1273,7 +1276,8 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "equity_metrics = rep.efficiency_and_equity()"
+        "equity_metrics = rep.efficiency_and_equity()\n",
+        "equity_metrics"
       ]
     },
     {
@@ -1540,7 +1544,7 @@
       "source": [
         "metric = 'precision@'\n",
         "parameter = '10_pct'\n",
-        "run_hash = 'f825e69ab968bb314b283e55bf8f6640'"
+        "run_hash = '98112c011d842c43e841c415116ef179'"
       ]
     },
     {
