--- a/example/colab/colab_triage.ipynb
+++ b/example/colab/colab_triage.ipynb
@@ -133,9 +133,7 @@
       "source": [
         "## A Quick Look at the DonorsChoose Data\n",
         "\n",
-        "Before getting into triage, let's just take a quick look at the data we'll be using here. To get started, we'll need to connect to the database we just created...\n",
-        "\n",
-        "🛑  &nbsp;&nbsp;**NOTE: If you get an error running the cell bellw, re-run it, the second time will work.**"
+        "Before getting into triage, let's just take a quick look at the data we'll be using here. To get started, we'll need to connect to the database we just created..."
       ]
     },
     {
