fixing report summary threshold

--- a/example/colab/colab_triage.ipynb
+++ b/example/colab/colab_triage.ipynb
@@ -1067,7 +1067,7 @@
         "# Model Performance metric and threshold\n",
         "# These default to 'recall@' and '1_pct'\n",
         "performance_metric = 'precision@'\n",
-        "threshold = '10_prc'\n",
+        "threshold = '10_pct'\n",
         "\n",
         "# Bias metric defaults to tpr_disparity and bias metric values for all groups generated (if bias audit specified in the experiment config)\n",
         "bias_metric = 'tpr_disparity'\n",
