--- a/example/colab/colab_triage.ipynb
+++ b/example/colab/colab_triage.ipynb
@@ -1202,7 +1202,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "features = rep.features()"
+        "rep.features()"
       ]
     },
     {
@@ -1279,6 +1279,15 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "evaluations"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
@@ -1291,7 +1300,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "subset_evaluations = rep.model_performance_subsets()"
+        "rep.model_performance_subsets()"
       ]
     },
     {
