wording in performance vs bias

--- a/example/colab/colab_triage.ipynb
+++ b/example/colab/colab_triage.ipynb
@@ -1311,7 +1311,7 @@
         "\n",
         "Plot with the peformance of different model groups and the bias metric selected in all groups defined and plot of group sizes vs the cohort size and the base rate for each `as_of_date`. \n",
         "\n",
-        "In our DonorsChoose example, we can tell that the teacher prefix `Mr.` has been used a the reference group, and that the Random Forest Classfier has no disparity across the different groups: Mr., Mrs., and Ms. but has less performance that other models. A deeper analysis and discussion in section [Bias Audit](#bias-audit) on this notebook."
+        "A deeper analysis and discussion in section [Bias Audit](#bias-audit) on this notebook."
       ]
     },
     {
