--- a/src/triage/component/postmodeling/experiment_summary_report_template.ipynb
+++ b/src/triage/component/postmodeling/experiment_summary_report_template.ipynb
@@ -19,15 +19,15 @@
     "import sqlalchemy\n",
     "import os\n",
     "import logging\n",
-    "\n",
-    "from sqlalchemy.engine.url import URL\n",
-    "from triage.util.db import create_engine\n",
-    "\n",
-    "from triage.component.postmodeling.experiment_summarizer import ExperimentReport, get_most_recent_experiment_hash, load_report_parameters_from_config\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "pd.set_option('precision', 4)\n",
+    "from yaml import safe_load\n",
+    "from sqlalchemy.engine.url import URL\n",
+    "from triage.util.db import create_engine\n",
+    "from triage.component.postmodeling.experiment_summarizer import ExperimentReport, get_most_recent_experiment_hash, load_report_parameters_from_config\n",
+    "\n",
+    "\n",
+    "pd.set_option('display.precision', 4)\n",
     "pd.set_option('display.max_colwidth', None)\n",
     "pd.set_option('display.max_rows', None)\n",
     "pd.set_option('display.max_columns', None)\n",
@@ -51,18 +51,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5ba0a414",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open(\"database.yaml\", \"r\") as f:\n",
+    "    config = safe_load(f)\n",
+    "\n",
+    "db_url = URL(\n",
+    "            'postgres',\n",
+    "            host=config['host'],\n",
+    "            username=config['user'],\n",
+    "            password=config['pass'],\n",
+    "            database=config['db'],\n",
+    "            port=config['port']\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "6ddc689d-c660-4767-be13-16ab4c1bfa25",
    "metadata": {},
    "outputs": [],
    "source": [
-    "db_url = URL(\n",
-    "            'postgres',\n",
-    "            host=os.getenv('PGHOST'),\n",
-    "            username=os.getenv('PGUSER'),\n",
-    "            database=os.getenv('PGDATABASE'),\n",
-    "            password=os.getenv('PGPASSWORD'),\n",
-    "            port=5432,\n",
-    "        )\n",
+    "# in case you have your db credentials as environment variables uncomment this code\n",
+    "# db_url = URL(\n",
+    "#             'postgres',\n",
+    "#             host=os.getenv('PGHOST'),\n",
+    "#             username=os.getenv('PGUSER'),\n",
+    "#             database=os.getenv('PGDATABASE'),\n",
+    "#             password=os.getenv('PGPASSWORD'),\n",
+    "#             port=5432,\n",
+    "#         )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5ce1a1a4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "db_engine = create_engine(db_url)"
    ]
