added documebntation to audition notebook

--- a/src/triage/component/audition/Audition_Tutorial.ipynb
+++ b/src/triage/component/audition/Audition_Tutorial.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "source": [
     "## Create database connection \n",
-    "### you can use the path to the file that has your database credentials that you used in running triager below"
+    "#### you can use the path to the file that has your database credentials that you used in running triage "
    ]
   },
   {
