db credentials either on env variables or yaml file

--- a/src/triage/component/postmodeling/experiment_summary_report_template.ipynb
+++ b/src/triage/component/postmodeling/experiment_summary_report_template.ipynb
@@ -49,41 +49,43 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5ba0a414",
+   "cell_type": "markdown",
+   "id": "0fcfacb7",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "with open(\"database.yaml\", \"r\") as f:\n",
-    "    config = safe_load(f)\n",
-    "\n",
-    "db_url = URL(\n",
-    "            'postgres',\n",
-    "            host=config['host'],\n",
-    "            username=config['user'],\n",
-    "            password=config['pass'],\n",
-    "            database=config['db'],\n",
-    "            port=config['port']\n",
-    "        )"
+    "The report expects to have the DB credentials either setup as environment variables or on a `database.yaml` file."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ddc689d-c660-4767-be13-16ab4c1bfa25",
+   "id": "6b02ae54",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# in case you have your db credentials as environment variables uncomment this code\n",
-    "# db_url = URL(\n",
-    "#             'postgres',\n",
-    "#             host=os.getenv('PGHOST'),\n",
-    "#             username=os.getenv('PGUSER'),\n",
-    "#             database=os.getenv('PGDATABASE'),\n",
-    "#             password=os.getenv('PGPASSWORD'),\n",
-    "#             port=5432,\n",
-    "#         )"
+    "environment_variable = os.getenv('PGUSER')\n",
+    "if environment_variable is not None: \n",
+    "    db_url = URL(\n",
+    "            'postgres',\n",
+    "            host=os.getenv('PGHOST'),\n",
+    "            username=os.getenv('PGUSER'),\n",
+    "            database=os.getenv('PGDATABASE'),\n",
+    "            password=os.getenv('PGPASSWORD'),\n",
+    "            port=5432,\n",
+    "        )\n",
+    "# db credentials not setup on environment variables\n",
+    "else: \n",
+    "    with open(\"database.yaml\", \"r\") as f:\n",
+    "        config = safe_load(f)\n",
+    "\n",
+    "    db_url = URL(\n",
+    "                'postgres',\n",
+    "                host=config['host'],\n",
+    "                username=config['user'],\n",
+    "                password=config['pass'],\n",
+    "                database=config['db'],\n",
+    "                port=config['port']\n",
+    "            )"
    ]
   },
   {
