--- a/src/triage/component/audition/Audition_Tutorial.ipynb
+++ b/src/triage/component/audition/Audition_Tutorial.ipynb
@@ -23,7 +23,7 @@
     "logging.basicConfig(level=logging.WARNING)\n",
     "\n",
     "import pandas as pd\n",
-    
+    "pd.set_option('precision', 4)"
    ]
   },
   {
