--- a/src/triage/component/audition/Audition_Tutorial.ipynb
+++ b/src/triage/component/audition/Audition_Tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -23,18 +23,26 @@
     "logging.basicConfig(level=logging.WARNING)\n",
     "\n",
     "import pandas as pd\n",
-    "pd.set_option('display.precision', 4)"
+    "pd.set_option('precision', 4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create database connection \n",
+    "#### you can use the path to the file that has your database credentials that you used in running triage "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "with open('db_default_profile.yaml') as fd:\n",
+    "with open('database-credentials.yaml') as fd:\n",
     "    config = yaml.load(fd)\n",
     "    dburl = sqlalchemy.engine.url.URL(\n",
     "        \"postgres\",\n",
@@ -67,12 +75,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "best_dist_table = 'aud_best_dist' # if you're looking at multiple experiments side-by-side, change this for each one\n",
     "metric = 'precision@'\n",
+    "# change this to what you care about\n",
     "parameter = '1000_abs'"
    ]
   },
@@ -890,7 +899,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "triage_postmodeling",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -904,7 +913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
